style: prevent scrolling when navbar is visible

--- a/src/feature/LoginModal/LoginModal.module.scss
+++ b/src/feature/LoginModal/LoginModal.module.scss
@@ -5,7 +5,7 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 200vh;
+	min-height: 370vh;
 	background-color: rgba(0, 0, 0, 0.85);
 	z-index: 100;
 }
